<resources>
    <string name="app_name">TimeStamper</string>
    <string name="action_settings">Settings</string>
    <string name="action_category_add">Add a new category</string>
    <string name="action_show_milliseconds">Show milliseconds</string>
    <string name="action_show_milliseconds_hint">Enable for very precise measurements</string>
    <string name="action_show_24">Use 24hr format</string>
    <string name="action_show_24_hint">Check if you prefer 24-hour time system to AM/PM format</string>
    <string name="add_note_to_new_stamps">Always enter notes</string>
    <string name="add_note_to_new_stamps_hint">If enabled, you will be asked to enter a note for every timestamp you have created in-app (Does not apply to widget) </string>
    <string name="use_gps">Record my location</string>
    <string name="use_gps_hint">App will try to fetch and save your location and store it locally in timestamp. Experimental feature</string>
    <string name="action_export">Export to CSV</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="action_category_toggle">Show categories</string>
    <string name="action_timestamps_delete">Delete timestamps</string>
    <string name="action_use_dark_theme">Use dark theme</string>
    <string name="action_use_dark_theme_hint">Changes will be applied on next app launch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_timestamp_created">New timestamp was created</string>
    <string name="new_timestamp_created_with_location">New timestamp was created. Location recorded</string>
    <string name="add_note_here">add a note here</string>
    <string name="add_from_widget">added from widget</string>
    <string name="null_location">Unable to record location, make sure GPS is ON</string>
    <string name="s1">Better three hours too soon than a minute too late.</string>
    <string name="s2">Time is nature\'s way of keeping everything from happening at once.</string>
    <string name="s3">Time flies over us, but leaves its shadow behind.</string>
    <string name="s4">Time moves in one direction, memory in another.</string>
    <string name="s5">Tough times never last, but tough people do.</string>
    <string name="s6">Time is what we want most, but what we use worst.</string>
    <string name="s7">Patience and time do more than strength or passion.</string>
    <string name="s8">Time is the most valuable thing a man can spend.</string>
    <string name="s9">Eternity: a moment standing still for ever.</string>
    <string name="s10">Time and tide wait for no man.</string>

    <string-array name="phrases">
        <item>@string/s1</item>
        <item>@string/s2</item>
        <item>@string/s3</item>
        <item>@string/s4</item>
        <item>@string/s5</item>
        <item>@string/s6</item>
        <item>@string/s7</item>
        <item>@string/s8</item>
        <item>@string/s9</item>
        <item>@string/s10</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recover_try">Try to Recover</string>
    <string name="import_export">Import / Export</string>
    <string name="settings">Settings</string>
    <string name="remove_category">Remove category</string>
    <string name="select_cat_to_remove">Select a category you want to delete</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this category?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_be_removed">This category can\'t be removed</string>
    <string name="widget_hint">HINT: Try NEW widget for instant timestamps</string>
    <string name="save">SAVE</string>
    <string name="add_new_category">Add New Category</string>
    <string name="scroll_right_and_pick_an_icon">Scroll right and pick an icon</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="auto_keyboard_hint">Keyboard will be shown automatically every time you add or edit notes</string>
    <string name="auto_keyboard">Auto show keyboard when adding a note</string>
    <string name="quick_notes">Show 5 last used notes</string>
    <string name="quick_notes_hint">You will be able to select from previously entered notes</string>
    <string name="notes_settings_hint">Quick notes, keyboard, auto notes…</string>
    <string name="notes_settings">New notes settings</string>
</resources>
