<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/settings" android:checkableBehavior="none">
        <menu>
            <item
                android:id="@+id/checkable_menu_showMillis"

                android:title="@string/action_show_milliseconds" />
            <item
                android:id="@+id/checkable_menu_use24hr"

                android:title="@string/action_show_24" />

            <item
                android:id="@+id/checkable_menu_use_dark_theme"

                android:title="@string/action_use_dark_theme"
                android:visible="false" />
            <item
                android:id="@+id/checkable_menu_auto_note"

                android:title="@string/add_note_to_new_stamps" />
            <item
                android:id="@+id/checkable_menu_useGPS"

                android:title="@string/use_gps" />


        </menu>
    </item>

    <item android:title="@string/import_export"  android:checkableBehavior="none">
        <menu>
            <item
                android:id="@+id/action_export"
                android:checkable="true"
                android:title="@string/action_export" />
        </menu>


    </item>

</menu>
