<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sardox.timestamper.MainActivity">
    <item
        android:id="@+id/checkable_menu_auto_note1"
        android:checkable="true"
        android:title="@string/add_note_to_new_stamps"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_export1"
        android:orderInCategory="110"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkable_menu_use24hr1"
        android:checkable="true"
        android:title="@string/action_show_24"
        android:orderInCategory="120"
        app:showAsAction="never"/>
    <item
        android:id="@+id/checkable_menu_showMillis1"
        android:checkable="true"
        android:title="@string/action_show_milliseconds"
        android:orderInCategory="130"
        app:showAsAction="never"/>

    <item
        android:id="@+id/checkable_menu_use_dark_theme1"
        android:checkable="true"
        android:orderInCategory="140"
        android:title="@string/action_use_dark_theme"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_category_add1"
        android:orderInCategory="150"
        android:title="@string/action_category_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_category_delete1"
        android:orderInCategory="160"
        android:title="@string/action_category_delete"
        app:showAsAction="never" />









</menu>
